--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,65 @@
-body{
+body {
     margin: 0;
     width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    
 }
 
 header {
     width: 100%;
+    height: 100vh; 
+    position: relative;
+    overflow: hidden; 
     display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 5px;
-   
+    justify-content: left; 
+    align-items: left; 
 }
 
-.container-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    position: relative; 
+    left: 150rem;
 }
+
+.header-content {
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-80%, -40%); 
+    text-align: left; 
+    color: white; 
+}
+
+.header-content h1 {
+    font-size: 70px; 
+    margin-top: 10px; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.header-content p {
+    margin: 10px 0; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 19px;
+}
+
+.start {
+    padding: 15px 35px; /* Espaciado del botón */
+    background-color: #08d496;/* Color de fondo del botón */
+    border: none; /* Sin borde */
+    border-radius: 70px; /* Borde redondeado */
+    cursor: pointer; /* Cambiar a cursor de puntero al pasar el ratón */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: #0a0836;
+    margin-top: 40px;
+}
+
+.start:hover {
+    background-color: #0056b3; /* Cambiar el color de fondo al pasar el ratón */
+}
+
+
