--- a/styles/index.css
+++ b/styles/index.css
@@ -59,7 +59,52 @@ header {
 }
 
 .start:hover {
-    background-color: #0056b3; /* Cambiar el color de fondo al pasar el ratón */
+    background-color: #0c7976; /* Cambiar el color de fondo al pasar el ratón */
 }
 
+.container-1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 5px;
+    margin: 80px;
+   
+}
+
+.container-1 >h2 {
+    font-size: 40px; 
+    margin-top: 10px; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+
+.container-1 > div {
+    flex: 1 1 120px;
+    text-align: center;
+    font-family: cursive;
+    font-size: 30px;
+    margin-top: 80px;
+    position: relative; 
+    right: 10rem;
+    gap: 10px;
+}
+
+
+/* Media queries para adaptar estilos en diferentes tamaños de pantalla */
+@media screen and (max-width: 768px) {
+    .header-content h1 {
+        font-size: 8vw;
+    }
+
+    .header-content p {
+        font-size: 3vw;
+    }
+
+    .start {
+        padding: 3vh 6vw;
+        font-size: 3vw;
+        margin-top: 10vh;
+    }
+}
 
