--- a/styles/index.css
+++ b/styles/index.css
@@ -62,33 +62,101 @@ header {
     background-color: #0c7976; /* Cambiar el color de fondo al pasar el ratón */
 }
 
-.container-1{
+.section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    position: relative;
+}
+
+.section-white {
+    background-color: white;
+}
+
+.section-green {
+    background-color: #00e676;
+    clip-path: polygon(0 40%, 100% 0, 100% 100%, 0 100%);
+    color: white;
+}
+
+.container-1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    gap: 5px;
-    margin: 80px;
-   
+    gap: 20px; 
+    padding: 40px; 
+    box-sizing: border-box; 
 }
 
-.container-1 >h2 {
+.container-1 > h1 {
     font-size: 40px; 
-    margin-top: 10px; 
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 40px; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    width: 100%; 
 }
 
 .container-1 > div {
-    flex: 1 1 120px;
+    flex: 1 1 350px; 
     text-align: center;
-    font-family: cursive;
-    font-size: 30px;
-    margin-top: 80px;
-    position: relative; 
-    right: 10rem;
-    gap: 10px;
+    margin-top: -30px; 
+    padding: 20px; 
+    box-sizing: border-box; 
 }
+
+.container-anti-spam {
+    font-size: 15px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+.container-anti-spam > p {
+    font-size: 18px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+.container-phishing-detect {
+    font-size: 15px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+.container-phishing-detect > p {
+    font-size: 18px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+.container-smart-scan {
+    font-size: 15px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+.container-smart-scan > p{
+    font-size: 18px; 
+    margin-top: 10px; 
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+}
+
+
+
+
 
 
 /* Media queries para adaptar estilos en diferentes tamaños de pantalla */
