--- a/styles/index.css
+++ b/styles/index.css
@@ -76,21 +76,22 @@ header {
 
 .section-green {
     background-color: #00e676;
-    clip-path: polygon(0 40%, 100% 0, 100% 100%, 0 100%);
+    clip-path: polygon(0 51%, 100% 0, 100% 100%, 0 100%);
     color: white;
 }
 
-.container-1 {
+.container-selection{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     gap: 20px; 
-    padding: 40px; 
+    padding: 10px; 
     box-sizing: border-box; 
+   
 }
 
-.container-1 > h1 {
+.container-selection > h1 {
     font-size: 40px; 
     margin-top: 40px; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -98,12 +99,13 @@ header {
     width: 100%; 
 }
 
-.container-1 > div {
-    flex: 1 1 350px; 
+.container-selection > div {
+    flex: 1 1 450px; 
     text-align: center;
     margin-top: -30px; 
-    padding: 20px; 
+    padding: 10px; 
     box-sizing: border-box; 
+
 }
 
 .container-anti-spam {
@@ -112,14 +114,15 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 100%;
+    background-color: #00e676;
 }
 
 .container-anti-spam > p {
-    font-size: 18px; 
+    font-size: 20px; 
     margin-top: 10px; 
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    width: 100%;
+    margin: 10px 0; 
 }
 
 .container-phishing-detect {
@@ -128,14 +131,17 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 100%;
+    background-color: blueviolet;
 }
 
 .container-phishing-detect > p {
-    font-size: 18px; 
+    font-size: 20px; 
     margin-top: 10px; 
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    width: 100%;
+    width: 80%;
+    margin: 10px 0; 
+    overflow: auto;
 }
 
 .container-smart-scan {
@@ -144,15 +150,21 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     width: 100%;
+    justify-content: center;
+    background-color: brown;
 }
 
 .container-smart-scan > p{
-    font-size: 18px; 
+    font-size: 20px; 
     margin-top: 10px; 
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    width: 100%;
+    width: 80%;
+    margin: 10px 0; 
 }
+
+
+
 
 
 
