--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,10 @@
 body {
     margin: 0;
     width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    height: 100vh; 
+    overflow-x: hidden; 
 }
+
 
 header {
     width: 100%;
@@ -58,9 +58,6 @@ header {
     margin-top: 40px;
 }
 
-.start:hover {
-    background-color: #0c7976; /* Cambiar el color de fondo al pasar el ratón */
-}
 
 /* Estilos generales */
 .container-selection {
@@ -81,7 +78,7 @@ header {
     text-align: center;
     width: 100%;
     position: relative;
-    left: 12rem;
+    left: 9rem;
 }
 
 .container-selection > div {
@@ -101,7 +98,7 @@ header {
     flex-direction: column;
     align-items: center;
     position: relative;
-    left: 12rem;
+    left: 9rem;
 }
 
 .container-anti-spam img,
@@ -114,7 +111,7 @@ header {
 .container-anti-spam > p,
 .container-phishing-detect > p,
 .container-smart-scan > p {
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 10px;
     margin: 10px 0;
 }
@@ -122,26 +119,137 @@ header {
 .container-take-learn {
     flex: 1 1 auto;
     text-align: left;
-    width: 300px;
-    margin-top: 20px;
+    width: 33%;
+    margin-top: 100px;
     padding: 10px;
     box-sizing: border-box;
     position: relative;
-    left: 12rem;
+    left: 6rem;
+   
 }
 
-.container-take-learn > h3,
-.container-take-learn > p,
+.container-take-learn > h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+}
+
+.container-take-learn > p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+}
+
 .container-take-learn > button {
     margin-bottom: 10px;
 }
 
 .btn-learn {
-    margin-top: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+    padding: 15px 35px; 
+    background-color: #152c3c;
+    border: none; 
+    border-radius: 70px; 
+    cursor: pointer; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: #f6f6fa;
+    margin-top: 40px;
 }
+
+.section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    overflow: visible; 
+    width: 100vw; 
+    box-sizing: border-box; 
+    height: 60vw;
+}
+
+.section .content {
+    width: 100%;
+    z-index: 1; 
+}
+
+.green-section {
+    background: #0affb6;
+    clip-path: polygon(0 40%, 100% 0%, 100% 100%, 0% 100%);
+    margin-top: -30rem; 
+    padding-top: 12rem; 
+    overflow: visible; 
+    position: relative; 
+    width: 100vw; 
+    box-sizing: border-box; 
+    height: 60vw;
+}
+
+.img-compu {
+    width: 30rem;
+    height: auto; 
+    position: absolute;
+    top: -15rem; 
+    left: 70%; 
+    transform: translateX(-50%); 
+    overflow: visible; 
+    z-index: 2; 
+}
+
+.computer {
+    width: 30rem; 
+    height: auto; 
+}
+
+.img-table {
+    width: 40rem;
+    height: auto; 
+    position: relative;
+    overflow: visible; 
+    z-index: 2; 
+    margin-top: 7rem;
+    right: 55%;
+}
+
+.table {
+    width: 100%; 
+    height: auto; 
+}
+
+.content > h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px; 
+    position: relative; 
+    left: 40rem;
+    margin-top: 7rem;
+}
+
+.content > p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    position: relative; 
+    left: 40rem;
+    column-count: 2;
+}
+
+.content > button{
+    margin-bottom: 10px;
+    position: relative; 
+    left: 40rem;
+}
+
+.btn-learn2{
+    padding: 15px 35px; 
+    background-color: #152c3c;
+    border: none; 
+    border-radius: 70px; 
+    cursor: pointer; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: #f6f6fa;
+    margin-top: 40px;
+}
+
+
 
 /* Media queries para pantallas más pequeñas */
 @media (max-width: 1200px) {
@@ -191,14 +299,6 @@ header {
     }
 }
 
-
-
-
-
-
-
-
-
 /* Media queries para adaptar estilos en diferentes tamaños de pantalla */
 @media screen and (max-width: 768px) {
     .header-content h1 {
@@ -215,4 +315,6 @@ header {
         margin-top: 10vh;
     }
 }
+
+
 
