--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,12 @@
 body {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     width: 100%;
-    height: 100vh; 
-    overflow-x: hidden; 
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
 }
-
 
 header {
     width: 100%;
@@ -26,15 +28,15 @@ header {
 
 .header-content {
     position: absolute; 
-    top: 50%; 
-    left: 50%;
+    top: 40%; 
+    left: 45%;
     transform: translate(-80%, -40%); 
     text-align: left; 
     color: white; 
 }
 
 .header-content h1 {
-    font-size: 70px; 
+    font-size: 5rem; 
     margin-top: 10px; 
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -42,15 +44,15 @@ header {
 .header-content p {
     margin: 10px 0; 
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 19px;
+    font-size: 1.5rem;
 }
 
 .start {
-    padding: 15px 35px; /* Espaciado del botón */
-    background-color: #08d496;/* Color de fondo del botón */
-    border: none; /* Sin borde */
-    border-radius: 70px; /* Borde redondeado */
-    cursor: pointer; /* Cambiar a cursor de puntero al pasar el ratón */
+    padding: 15px 35px; 
+    background-color: #08d496;
+    border: none; 
+    border-radius: 70px; 
+    cursor: pointer; 
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     font-weight: bold;
@@ -58,8 +60,11 @@ header {
     margin-top: 40px;
 }
 
+.start:hover {
+    background-color: #0a0836;
+    color: #08d496;
+}
 
-/* Estilos generales */
 .container-selection {
     display: flex;
     flex-wrap: wrap;
@@ -74,7 +79,8 @@ header {
 .container-selection > h1 {
     font-size: 40px;
     margin-top: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #152c3c;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     width: 100%;
     position: relative;
@@ -101,6 +107,17 @@ header {
     left: 9rem;
 }
 
+.container-anti-spam h2,
+.container-phishing-detect h2,
+.container-smart-scan h2 {
+    font-size: 30px;
+    font-weight: 500;
+    color: #152c3c;
+    padding: 0;
+    margin: 0;
+}
+
+
 .container-anti-spam img,
 .container-phishing-detect img,
 .container-smart-scan img {
@@ -111,9 +128,10 @@ header {
 .container-anti-spam > p,
 .container-phishing-detect > p,
 .container-smart-scan > p {
-    font-size: 15px;
-    margin-top: 10px;
-    margin: 10px 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: #4f5458;
+    width: 70%;
 }
 
 .container-take-learn {
@@ -121,26 +139,30 @@ header {
     text-align: left;
     width: 33%;
     margin-top: 100px;
-    padding: 10px;
+    padding-top: 10px;
     box-sizing: border-box;
     position: relative;
     left: 6rem;
-   
+    top: 2rem;
 }
 
-.container-take-learn > h3{
+.container-take-learn > h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px;
+    font-size: 3.5rem;
+    padding: 0;
+    margin: 0;
+
 }
 
 .container-take-learn > p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
-}
-
-.container-take-learn > button {
+    font-size: 1.2rem;
+    font-weight: lighter;
+    color: #616568;
     margin-bottom: 10px;
 }
+
+
 
 .btn-learn {
     padding: 15px 35px; 
@@ -155,40 +177,64 @@ header {
     margin-top: 40px;
 }
 
+.btn-learn:hover {
+    background-color: #bdbdbd;
+    color: #152c3c;
+}
+
 .section {
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
-    overflow: visible; 
-    width: 100vw; 
-    box-sizing: border-box; 
-    height: 60vw;
+    overflow: visible;
+    width: 100%;
+    height: 50vw;
 }
 
 .section .content {
-    width: 100%;
-    z-index: 1; 
+    width: 40%;
+    text-align: left;
+    z-index: 1;
+}
+
+
+
+.content h2{
+    font-size: 3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #152c3c;
+    margin: 0;
+    padding: 0;
+}
+
+.content p {
+    font-size: 1.3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #4f5458;
+    width: 80%;
+    margin-top: 30px;
+    padding: 0;
 }
 
 .green-section {
     background: #0affb6;
     clip-path: polygon(0 40%, 100% 0%, 100% 100%, 0% 100%);
-    margin-top: -30rem; 
-    padding-top: 12rem; 
-    overflow: visible; 
-    position: relative; 
-    width: 100vw; 
-    box-sizing: border-box; 
-    height: 60vw;
+    padding-top: 10rem;
+    width: 100%; 
+    margin-top: -400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .img-compu {
     width: 30rem;
     height: auto; 
     position: absolute;
-    top: -15rem; 
-    left: 70%; 
+    top: -18rem; 
+    left: 75%; 
     transform: translateX(-50%); 
     overflow: visible; 
     z-index: 2; 
@@ -200,13 +246,15 @@ header {
 }
 
 .img-table {
-    width: 40rem;
-    height: auto; 
+    width: 40%;
     position: relative;
-    overflow: visible; 
-    z-index: 2; 
-    margin-top: 7rem;
-    right: 55%;
+    top: 20px;
+
+}
+
+.img-table img {
+    width: 75%; 
+    height: auto; 
 }
 
 .table {
@@ -214,29 +262,19 @@ header {
     height: auto; 
 }
 
-.content > h2 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px; 
-    position: relative; 
-    left: 40rem;
-    margin-top: 7rem;
+
+
+.prices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    position: relative;
+    
 }
 
-.content > p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
-    position: relative; 
-    left: 40rem;
-    column-count: 2;
-}
-
-.content > button{
-    margin-bottom: 10px;
-    position: relative; 
-    left: 40rem;
-}
-
-.btn-learn2{
+.btn-learn2 {
     padding: 15px 35px; 
     background-color: #152c3c;
     border: none; 
@@ -249,72 +287,242 @@ header {
     margin-top: 40px;
 }
 
-
-
-/* Media queries para pantallas más pequeñas */
-@media (max-width: 1200px) {
-    .container-selection > h1,
-    .container-anti-spam,
-    .container-phishing-detect,
-    .container-smart-scan,
-    .container-take-learn {
-        left: 6rem;
-    }
+.btn-learn2:hover {
+    background-color: #f6f6fa;
+    color: #152c3c;
 }
 
-@media (max-width: 768px) {
-    .container-selection > h1,
-    .container-anti-spam,
-    .container-phishing-detect,
-    .container-smart-scan,
-    .container-take-learn {
-        left: 3rem;
-    }
-
-    .container-selection {
-        width: 90%;
-    }
-
-    .container-selection > div {
-        flex: 1 1 100%;
-    }
+.container-img-row{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-top: 50px;
+    background-color: #f6f6fa;
 }
 
-@media (max-width: 480px) {
-    .container-selection > h1,
-    .container-anti-spam,
-    .container-phishing-detect,
-    .container-smart-scan,
-    .container-take-learn {
-        left: 0;
-    }
+.pricing-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    position: relative;
+  }
+  
+  .pricing-card {
+    background-color: #ffffff;
+    padding: 40px;
+    width: 300px;
+    height: 450px;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+  }
+  
+  .pricing-card.premium {
+    background-color: #2c3e50;
+    color: #ffffff;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    height: 430px;
+  }
+  
+  .pricing-card h2 {
+    font-size: 25px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+  }
+  
+  .pricing-card .price {
+    font-size: 2em;
+    font-weight: bold;
+  }
+  
+  .pricing-card .price span {
+    font-size: 15px;
+  }
+  
+  .pricing-card ul {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+  }
+  
+  .pricing-card ul li {
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+  }
+  
+  .pricing-card button {
+    background-color: #f8fcfb;;
+    border: none;
+    color: #152c3c;
+    padding: 15px 30px;
+    cursor: pointer;
+    margin-top: 25px;
+    border-radius: 70px;
+    border: 4px solid #152c3c; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+  }
 
-    .container-selection > h1 {
-        font-size: 30px;
-        left: 0;
-    }
-
-    .container-selection {
-        width: 100%;
-    }
+.pricing-card button:hover {
+    background-color: #152c3c;
+    color: #f8fcfb;
 }
 
-/* Media queries para adaptar estilos en diferentes tamaños de pantalla */
-@media screen and (max-width: 768px) {
-    .header-content h1 {
-        font-size: 8vw;
-    }
+.pricing-card.premium > button {
+    background-color:  #08d496;
+    border: none;
+    color: #152c3c;
+    padding: 15px 30px;
+    cursor: pointer;
+    margin-top: 25px;
+    border-radius: 70px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+}
 
-    .header-content p {
-        font-size: 3vw;
-    }
+.pricing-card.premium > button:hover {
+    background-color: #0c1d2a;
+    color: #08d496;
+}
+  
+.contact-section {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    color: rgb(255, 254, 254);
+    position: relative; 
+    height: 98%;
+}
 
-    .start {
-        padding: 3vh 6vw;
-        font-size: 3vw;
-        margin-top: 10vh;
-    }
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 65%;
+    object-fit: cover;
+    z-index: -1; 
+    
+}
+
+.contact-info,
+.contact-form {
+    width: 45%;
+}
+
+.contact-info h2 {
+    font-size: 45px;
+    margin-bottom: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    left: 2rem;
+    
 }
 
 
+.contact-info p {
+    margin-bottom: 10px;
+    color: #f6f6fa;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    left: 2rem;
+    font-size: 18px;
+    display: inline-block; 
+    width: 70%; 
+    box-sizing: border-box; 
+}
 
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-field {
+    width: 45%;
+   
+}
+
+.contact-form label {
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    right: 5rem;
+    color: #08d496;
+}
+
+.contact-form input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    font-size: 16px;
+    border: 3px solid #08d496; /* Border color similar to the green color in the image */
+    border-radius: 5px;
+    background: none;
+    color: white;
+    margin-top: 50px;
+    position: relative;
+    right: 5rem;
+}
+
+.contact-form textarea {
+    width: 223%;
+    margin-bottom: 20px;
+    padding: 10px;
+    font-size: 16px;
+    border: 3px solid#08d496; /* Border color similar to the green color in the image */
+    border-radius: 5px;
+    background: none;
+    color: white;
+    margin-top: 10px;
+    position: relative;
+    right: 5rem;
+    
+}
+
+.contact-form textarea {
+    height: 40px;
+}
+
+.contact-form button {
+    padding: 15px 35px;
+    background-color:#08d496; /* Button background color */
+    border: none;
+    border-radius: 30px;
+    color: #0a0836; /* Button text color */
+    font-size: 18px;
+    cursor: pointer;
+    position: relative;
+    right: 5rem;
+    width: 105%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.contact-form button:hover {
+    background-color: #0c0957;
+    color: #08d496;
+}
+
+footer {
+    background-color: #152c3c; 
+    color: #FFFFFF; 
+    text-align: center;  
+    width: 98%;
+    padding: 15px;
+    position: relative; 
+    bottom: 0; 
+}
