--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     flex-direction: column;
     align-items: center;
 }
@@ -16,6 +16,7 @@ header {
     display: flex;
     justify-content: left; 
     align-items: left; 
+    background-size: cover;
 }
 
 .background-image {
@@ -25,6 +26,15 @@ header {
     position: relative; 
     left: 150rem;
 }
+
+.logo {
+    position: relative;
+    z-index: 1; 
+    width: 450px; 
+    height: 90px; 
+    left: 12rem;
+    margin-top: 6rem;
+  }
 
 .header-content {
     position: absolute; 
@@ -407,7 +417,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 65%;
+    height: 100%;
     object-fit: cover;
     z-index: -1; 
     
@@ -518,11 +528,11 @@ header {
 }
 
 footer {
-    background-color: #152c3c; 
+    background-color: #054777; 
     color: #FFFFFF; 
     text-align: center;  
-    width: 98%;
+    width: 100%;
     padding: 15px;
-    position: relative; 
-    bottom: 0; 
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
